# gitnav

./: .gitignore  CHANGELOG.md  CI_CD_SETUP.md  CODE_REVIEW.md  Cargo.toml  DEVELOPMENT_SUMMARY.md  LICENSE  README.md  ROADMAP.md  TODO.md  dist.toml
.claude/: settings.local.json
.github/scripts/: update-homebrew.sh  update-scoop.sh
.github/workflows/: release.yml  tests.yml
config/: config.example.toml
docs/: CI_CD_SETUP.md  CODE_REVIEW.md  GITHUB_WORKFLOWS.md  environment-variables.md  usage-guide.md
docs/configuration/: environment-variables.md
docs/development/: github-workflows.md  roadmap.md
docs/getting-started/: quick-start.md
docs/guides/: scripting.md  usage-guide.md
docs/reference/: exit-codes.md  performance.md
docs/refrence/: cli-design-guide.md  posix-utility-conventions-guide.md  twelve-factor-cli-guide.md  unix-philosophy-guide.md
homebrew/: README.md  gitnav.rb
scoop/: gitnav.json
scripts/: test-builds.ps1  test-builds.sh
src/: cache.rs  config.rs  exit_codes.rs  fzf.rs  main.rs  output.rs  preview.rs  scanner.rs  shell.rs
