[package]
name = "gitnav"
version = "0.1.0"
edition = "2021"
authors = ["msetsma"]
description = "Fast git repository navigator with fuzzy finding"
license = "MIT OR Apache-2.0"
repository = "https://github.com/msetsma/gitnav"
keywords = ["git", "navigation", "fzf", "cli", "fuzzy"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "gitnav"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
git2 = { version = "0.19", features = ["vendored-openssl", "vendored-libgit2"] }
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
anyhow = "1.0"
chrono = "0.4"
sha2 = "0.10"
shellexpand = "3.1"
atty = "0.2"
